Bug Fix: Wrong Color Grid Button
Fixed a bug where the active button will show black or white instead of orange after the player changes to/from black and white mode.

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ p {
 }
 
 .active {
-  background-color: #ffabab;
+  /*  !important will stop the black n white mode from affecting button color when playing game.*/
+  background-color: #ffabab !important;
   opacity: 100%;
 }
